--- a/index.html
+++ b/index.html
@@ -11,5 +11,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <div class="flex-container">
+            <div class="logo details-header">logo</div>
+            <nav class="details-header">
+                <ul>
+                    <li>link</li>
+                    <li>link</li>
+                    <li>link</li>
+                    <li>link</li>
+                </ul>
+            </nav>
+            <div class="login details-header">login</div>
+        </div>
+    </header>
 </body>
 </html>
