--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="flex-container">
+        <div class="flex-container-header">
             <div class="logo details-header">logo</div>
             <nav class="details-header">
                 <ul>
@@ -25,5 +25,10 @@
             <div class="login details-header">login</div>
         </div>
     </header>
+    <section id="under-header">
+        <div class="flex-container-blue">
+            <div class="rectangle-violet"></div>
+        </div>
+    </section>
 </body>
 </html>
