added first-section main

--- a/index.html
+++ b/index.html
@@ -25,10 +25,23 @@
             <div class="login details-header">login</div>
         </div>
     </header>
+    
     <section id="under-header">
         <div class="flex-container-blue">
             <div class="rectangle-violet"></div>
         </div>
     </section>
+
+    <main>
+        <section id="first-section-main">
+            <div class="bg-white">
+                <div class="flex-container-main">
+                    <div class="light-blue-part"></div>
+                    <div class="light-pink-part"></div>
+                </div>
+            </div>
+        </section>
+
+    </main>
 </body>
 </html>
