added second-section main

--- a/index.html
+++ b/index.html
@@ -34,14 +34,22 @@
 
     <main>
         <section id="first-section-main">
-            <div class="bg-white">
+            <div class="main-bg white-bg">
                 <div class="flex-container-main">
                     <div class="light-blue-part"></div>
                     <div class="light-pink-part"></div>
                 </div>
             </div>
         </section>
-
+        <section id="second-section-main">
+            <div class="main-bg grey-bg">
+                <div class="flex-container-main">
+                    <div class="light-pink-part"></div>
+                    <div class="light-blue-part"></div>
+                </div>
+            </div>
+        </section>
+        
     </main>
 </body>
 </html>
