added third-section main

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <main>
         <section id="first-section-main">
-            <div class="main-bg white-bg">
+            <div class="main-background white-bg">
                 <div class="flex-container-main">
                     <div class="light-blue-part"></div>
                     <div class="light-pink-part"></div>
@@ -42,14 +42,25 @@
             </div>
         </section>
         <section id="second-section-main">
-            <div class="main-bg grey-bg">
+            <div class="main-background grey-bg">
                 <div class="flex-container-main">
                     <div class="light-pink-part"></div>
                     <div class="light-blue-part"></div>
                 </div>
             </div>
         </section>
-        
+        <section id="third-section-main">
+            <div class="main-background white-bg">
+                <div class="flex-container-main">
+                    <div class="light-blue-part"></div>
+                    <div class="light-pink-part"></div>
+                </div>
+            </div>
+        </section>
+        <section id="section-green-square">
+            <div class="grey-bg"></div>
+        </section>
+
     </main>
 </body>
 </html>
