--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
             </div>
         </section>
         <section id="section-green-square">
-            <div class="grey-bg"></div>
+            <div class="main-background-square grey-bg">
+                <div class="flex-container-square"></div>
+            </div>
         </section>
 
     </main>
