--- a/index.html
+++ b/index.html
@@ -11,58 +11,71 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <div class="flex-container-header">
-            <div class="logo details-header">logo</div>
-            <nav class="details-header">
-                <ul>
-                    <li>link</li>
-                    <li>link</li>
-                    <li>link</li>
-                    <li>link</li>
-                </ul>
-            </nav>
-            <div class="login details-header">login</div>
-        </div>
-    </header>
+    <div class="container">
+        <header>
+            <div class="flex-container-header">
+                <div class="logo details-header">logo</div>
+                <nav class="details-header">
+                    <ul>
+                        <li>link</li>
+                        <li>link</li>
+                        <li>link</li>
+                        <li>link</li>
+                    </ul>
+                </nav>
+                <div class="login details-header">login</div>
+            </div>
+        </header>
+        
+        <section id="under-header">
+            <div class="flex-container-blue">
+                <div class="rectangle-violet"></div>
+            </div>
+        </section>
     
-    <section id="under-header">
-        <div class="flex-container-blue">
-            <div class="rectangle-violet"></div>
-        </div>
-    </section>
+        <main>
+            <section id="first-section-main">
+                <div class="main-background white-bg">
+                    <div class="flex-container-main">
+                        <div class="light-blue-column"></div>
+                        <div class="light-pink-column"></div>
+                    </div>
+                </div>
+            </section>
+            <section id="second-section-main">
+                <div class="main-background grey-bg">
+                    <div class="flex-container-main">
+                        <div class="light-pink-column"></div>
+                        <div class="light-blue-column"></div>
+                    </div>
+                </div>
+            </section>
+            <section id="third-section-main">
+                <div class="main-background white-bg">
+                    <div class="flex-container-main">
+                        <div class="light-blue-column"></div>
+                        <div class="light-pink-column"></div>
+                    </div>
+                </div>
+            </section>
+            <section id="section-green-square">
+                <div class="main-background background-square grey-bg">
+                    <div class="flex-container-square"></div>
+                </div>
+            </section>
+            <section id="section-five-column">
+                <div class="main-background black-bg">
+                    <div class="flex-container-main">
+                        <div class="salmon-column"></div>
+                        <div class="cold-green-column"></div>
+                        <div class="cold-green-column"></div>
+                        <div class="cold-green-column"></div>
+                        <div class="cold-green-column"></div>
+                    </div>
+                </div>
+            </section>
+        </main>  
+    </div>
 
-    <main>
-        <section id="first-section-main">
-            <div class="main-background white-bg">
-                <div class="flex-container-main">
-                    <div class="light-blue-part"></div>
-                    <div class="light-pink-part"></div>
-                </div>
-            </div>
-        </section>
-        <section id="second-section-main">
-            <div class="main-background grey-bg">
-                <div class="flex-container-main">
-                    <div class="light-pink-part"></div>
-                    <div class="light-blue-part"></div>
-                </div>
-            </div>
-        </section>
-        <section id="third-section-main">
-            <div class="main-background white-bg">
-                <div class="flex-container-main">
-                    <div class="light-blue-part"></div>
-                    <div class="light-pink-part"></div>
-                </div>
-            </div>
-        </section>
-        <section id="section-green-square">
-            <div class="main-background-square grey-bg">
-                <div class="flex-container-square"></div>
-            </div>
-        </section>
-
-    </main>
 </body>
 </html>
