--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
             </section>
             <section id="section-five-column">
-                <div class="main-background black-bg">
+                <div class="main-background black-bg border-bottom">
                     <div class="flex-container-main">
                         <div class="salmon-column"></div>
                         <div class="cold-green-column"></div>
@@ -75,6 +75,12 @@
                 </div>
             </section>
         </main>  
+        <footer class="border-bottom">
+           <div class="flex-container-footer">
+                <div class="logo-footer">Logo</div>
+                <div class="bottone-footer">Bottone</div>
+           </div>
+        </footer>
     </div>
 
 </body>
