header and jumbotron corrections

--- a/index.html
+++ b/index.html
@@ -11,77 +11,76 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <div class="flex-container-header">
-                <div class="logo details-header">logo</div>
-                <nav class="details-header">
-                    <ul>
-                        <li>link</li>
-                        <li>link</li>
-                        <li>link</li>
-                        <li>link</li>
-                    </ul>
-                </nav>
-                <div class="login details-header">login</div>
-            </div>
+    <!-- Header -->
+    <header>
+        <div class="navbar container">
+            <div class="navbar-logo">logo</div>
+            <nav class="navbar-menu">
+                <ul>
+                    <li>link</li>
+                    <li>link</li>
+                    <li>link</li>
+                    <li>link</li>
+                </ul>
+            </nav>
+            <div class="navbar-button">login</div>
+        </div>
         </header>
-        
-        <section id="under-header">
-            <div class="flex-container-blue">
-                <div class="rectangle-violet"></div>
+    <!-- Jumbotron -->
+    <section class="jumbotron-section">
+        <div class="jumbotron-container">
+            <div class="jumbotron-content"></div>
+        </div>
+    </section>
+    <!-- Main -->
+    <main>
+        <section id="first-section-main">
+            <div class="main-background white-bg">
+                <div class="flex-container-main">
+                    <div class="light-blue-column"></div>
+                    <div class="light-pink-column"></div>
+                </div>
+                </div>
+        </section>
+        <section id="second-section-main">
+            <div class="main-background grey-bg">
+                <div class="flex-container-main">
+                    <div class="light-pink-column"></div>
+                    <div class="light-blue-column"></div>
+                </div>
             </div>
         </section>
-    
-        <main>
-            <section id="first-section-main">
-                <div class="main-background white-bg">
-                    <div class="flex-container-main">
-                        <div class="light-blue-column"></div>
-                        <div class="light-pink-column"></div>
-                    </div>
+        <section id="third-section-main">
+            <div class="main-background white-bg">
+                <div class="flex-container-main">
+                    <div class="light-blue-column"></div>
+                    <div class="light-pink-column"></div>
                 </div>
-            </section>
-            <section id="second-section-main">
-                <div class="main-background grey-bg">
-                    <div class="flex-container-main">
-                        <div class="light-pink-column"></div>
-                        <div class="light-blue-column"></div>
-                    </div>
+            </div>
+        </section>
+        <section id="fourth-section-main">
+            <div class="main-background background-square grey-bg">
+                <div class="flex-container-square"></div>
+            </div>
+        </section>
+        <section id="section-five-column">
+            <div class="main-background black-bg border-bottom">
+                <div class="flex-container-main">
+                    <div class="salmon-column"></div>
+                    <div class="cold-green-column"></div>
+                    <div class="cold-green-column"></div>
+                    <div class="cold-green-column"></div>
+                    <div class="cold-green-column"></div>
                 </div>
-            </section>
-            <section id="third-section-main">
-                <div class="main-background white-bg">
-                    <div class="flex-container-main">
-                        <div class="light-blue-column"></div>
-                        <div class="light-pink-column"></div>
-                    </div>
-                </div>
-            </section>
-            <section id="section-green-square">
-                <div class="main-background background-square grey-bg">
-                    <div class="flex-container-square"></div>
-                </div>
-            </section>
-            <section id="section-five-column">
-                <div class="main-background black-bg border-bottom">
-                    <div class="flex-container-main">
-                        <div class="salmon-column"></div>
-                        <div class="cold-green-column"></div>
-                        <div class="cold-green-column"></div>
-                        <div class="cold-green-column"></div>
-                        <div class="cold-green-column"></div>
-                    </div>
-                </div>
-            </section>
-        </main>  
-        <footer class="border-bottom">
-           <div class="flex-container-footer">
-                <div class="logo-footer">Logo</div>
-                <div class="bottone-footer">Bottone</div>
-           </div>
-        </footer>
-    </div>
-
+            </div>
+        </section>
+    </main>  
+    <!-- Footer -->
+    <footer class="border-bottom">
+        <div class="flex-container-footer">
+            <div class="logo-footer">Logo</div>
+            <div class="bottone-footer">Bottone</div>
+        </div>
+    </footer>
 </body>
 </html>
